Added sample code to have a local DB reset

--- a/InventoryDemo.xcodeproj/xcshareddata/xcschemes/InventoryDemo.xcscheme
+++ b/InventoryDemo.xcodeproj/xcshareddata/xcschemes/InventoryDemo.xcscheme
@@ -60,6 +60,13 @@
             ReferencedContainer = "container:InventoryDemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CLEAN_REALM"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
