--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,9 @@ jobs:
 #     - uses: actions/checkout@v2
     - name: "Define Realm APP Id"
       if: ${{ github.ref == 'refs/heads/main' }}
+# https://docs.github.com/en/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable      
       run: | 
-           echo "::set-env $REALM_APP_ID=DAY_OF_WEEK::inventorysync-ctnnu"
+           echo "REALM_APP_ID=inventorysync-ctnnu" >> $GITHUB_ENV
            echo "We are in the main branch $REALM_APP_ID "
     - name: "Test env vars"
       run: |
