--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
            echo "REALM_APP_ID=inventorysync-ctnnu" >> $GITHUB_ENV
            echo "We are in the main branch $REALM_APP_ID "
     - name: "Are we in Lauren's dev branch?"
-      if: ${{ github.ref == 'refs/heads/lauren-dev' }} || ${{ github.base_ref == 'refs/heads/lauren-dev' }}
+      if: ${{ github.ref == 'refs/heads/lauren-dev' }} || ${{ github.head_ref == 'refs/heads/lauren-dev' }}
       run: | 
            echo "REALM_APP_ID=lauren-dev-pjiuk" >> $GITHUB_ENV
            echo "We are in Lauren's dev branch $REALM_APP_ID "
@@ -26,7 +26,7 @@ jobs:
            echo ${{ env.REALM_APP_ID }}
            echo "the realm app id is: $REALM_APP_ID"
            echo ${{ github.ref }}
-           echo ${{ github.base_ref }}
+           echo ${{ github.head_ref }}
 #     - name: Build
 #       run: |
 #            pwd
