--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,8 @@ jobs:
     - name: "Install Realm CLI & push the Realm app"
       run: | 
            npm install -g mongodb-realm-cli@beta
+           pwd
+           cd inventory/export/sync
            realm-cli push --remote="${{ env.REALM_APP_ID }}"
 #     - name: "Build mobile app & run tests"
 #       run: |
