--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-#     - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 #     Setting env vars based on https://docs.github.com/en/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable      
     - name: "Are we in the Main branch?"
       if: ${{ github.ref == 'refs/heads/main' }}
