--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
            npm install -g mongodb-realm-cli@beta
            pwd
            cd inventory/export/sync
-           realm-cli login --api-key="${{ env.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ REALM_API_PRIVATE_KEY }}"
+           realm-cli login --api-key="${{ secrets.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_PRIVATE_KEY }}"
            realm-cli push --remote="${{ env.REALM_APP_ID }}"
 #     - name: "Build mobile app & run tests"
 #       run: |
