--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,12 +31,13 @@ jobs:
            echo ${{ github.head_ref }}
     - name: "Install Realm CLI & push the Realm app"
 # Looks like auth is broken in beta5. Going to specify beta 4
+# npm install -g mongodb-realm-cli@2.0.0-beta.4
 #           npm install -g mongodb-realm-cli@beta
       run: | 
-           npm install -g mongodb-realm-cli@2.0.0-beta.4
+           npm install -g mongodb-realm-cli@beta
            pwd
            cd inventory/export/sync
-           realm-cli login --api-key="${{ secrets.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_PRIVATE_KEY }}"
+           realm-cli login --api-key="${{ secrets.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
            realm-cli push --remote="${{ env.REALM_APP_ID }}"
 #     - name: "Build mobile app & run tests"
 #       run: |
