--- a/inventory/clients/ios-swiftui/InventoryDemo/InventoryDemo.xcodeproj/xcshareddata/xcschemes/ci.xcscheme
+++ b/inventory/clients/ios-swiftui/InventoryDemo/InventoryDemo.xcodeproj/xcshareddata/xcschemes/ci.xcscheme
@@ -28,6 +28,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0A2F0CD22630126000CEC71B"
+               BuildableName = "InventoryDemoTests.xctest"
+               BlueprintName = "InventoryDemoTests"
+               ReferencedContainer = "container:InventoryDemo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0A2F0CDD2630126000CEC71B"
+               BuildableName = "InventoryDemoUITests.xctest"
+               BlueprintName = "InventoryDemoUITests"
+               ReferencedContainer = "container:InventoryDemo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
