--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,10 +62,10 @@ jobs:
            echo ${{ env.REALM_APP_ID }}
            echo "IS_TESTING_APP=true" >> $GITHUB_ENV
            echo ${{ env.IS_TESTING_APP }}
-#     - name: "Build mobile app & run tests"
-#       run: |
-#            echo ${{ env.REALM_APP_ID }}
-#            echo "the realm app id is: $REALM_APP_ID"
-#            cd inventory/clients/ios-swiftui/InventoryDemo
-#           xcodebuild -project InventoryDemo.xcodeproj -scheme "ci" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max,OS=14.4' -derivedDataPath './output' REALM_APP_ID='${{ env.REALM_APP_ID }}' 
+    - name: "Build mobile app & run tests"
+      run: |
+           echo ${{ env.REALM_APP_ID }}
+           echo "the realm app id is: $REALM_APP_ID"
+           cd inventory/clients/ios-swiftui/InventoryDemo
+           xcodebuild -project InventoryDemo.xcodeproj -scheme "ci" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max,OS=14.4' -derivedDataPath './output' REALM_APP_ID='${{ env.REALM_APP_ID }}' test
 # TODO: Delete apps where IS_TESTING_APP
