--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,31 +47,31 @@ jobs:
            sed -i txt 's/{/{ "environment": "testing",/' realm_config.json 
            cat realm_config.json
 # Adding --realm-url and --atlas-url to login command to workaround authentication error           
-#     - name: "Install the Realm CLI & authenticate (generic api key)"
-#       if: ${{ env.REALM_APP_ID }}
-#       run: | 
-#            npm install -g mongodb-realm-cli@beta
-#            realm-cli login --api-key="${{ secrets.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
+    - name: "Install the Realm CLI & authenticate (generic api key)"
+      if: ${{ env.REALM_APP_ID }}
+      run: | 
+           npm install -g mongodb-realm-cli@beta
+           realm-cli login --api-key="${{ secrets.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
 # Making these separate steps since specifying the project id isn't working so we need to use separate API keys
-#     - name: "Install the Realm CLI & authenticate (Testing Project api key)"
-#       if: ${{ !env.REALM_APP_ID }}
-#       run: | 
-#            npm install -g mongodb-realm-cli@beta
-#            realm-cli login --api-key="${{ secrets.REALM_API_TESTING_PROJECT_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_TESTING_PROJECT_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
-#     - name: "Push updated copy of the Realm app if we have the Realm App ID"
-#       if: ${{ env.REALM_APP_ID }}
-#       run: | 
-#            cd inventory/export/sync
-#            realm-cli push --remote="${{ env.REALM_APP_ID }}"
-#     - name: "Create a new Realm app for pull requests where the Realm app does not yet exist"
-#       if: ${{ !env.REALM_APP_ID }}
-#       run: |
-#            cd inventory/export/sync
-#            realm-cli import -y
-#            output=$(realm-cli app describe)
-#            app_id=$(echo $output | sed 's/^.*client_app_id": "\([^"]*\).*/\1/')
-#            echo "REALM_APP_ID=$app_id" >> $GITHUB_ENV
-#            echo "IS_DYNAMICALLY_GENERATED_APP=true" >> $GITHUB_ENV
+    - name: "Install the Realm CLI & authenticate (Testing Project api key)"
+      if: ${{ !env.REALM_APP_ID }}
+      run: | 
+           npm install -g mongodb-realm-cli@beta
+           realm-cli login --api-key="${{ secrets.REALM_API_TESTING_PROJECT_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_TESTING_PROJECT_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
+    - name: "Push updated copy of the Realm app if we have the Realm App ID"
+      if: ${{ env.REALM_APP_ID }}
+      run: | 
+           cd inventory/export/sync
+           realm-cli push --remote="${{ env.REALM_APP_ID }}"
+    - name: "Create a new Realm app for pull requests where the Realm app does not yet exist"
+      if: ${{ !env.REALM_APP_ID }}
+      run: |
+           cd inventory/export/sync
+           realm-cli import -y
+           output=$(realm-cli app describe)
+           app_id=$(echo $output | sed 's/^.*client_app_id": "\([^"]*\).*/\1/')
+           echo "REALM_APP_ID=$app_id" >> $GITHUB_ENV
+           echo "IS_DYNAMICALLY_GENERATED_APP=true" >> $GITHUB_ENV
 #     - name: "Build mobile app & run tests"
 #       run: |
 #            echo "the realm app id is: $REALM_APP_ID"
