--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,22 +13,14 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 #     Setting env vars based on https://docs.github.com/en/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable      
-    - name: "Are we in the Main branch?"
+    - name: "Are we pushing to the Main branch?"
       if: ${{ github.ref == 'refs/heads/main' }}
       run: | 
            echo "REALM_APP_ID=inventorysync-ctnnu" >> $GITHUB_ENV
-           echo "We are in the main branch $REALM_APP_ID "
-    - name: "Are we in Lauren's dev branch?"
-      if: ${{ github.ref == 'refs/heads/lauren-dev' || github.head_ref == 'lauren-dev' }}
+    - name: "Are we pushing to the Staging branch?"
+      if: ${{ github.ref == 'refs/heads/staging' }}
       run: | 
-           echo "REALM_APP_ID=lauren-dev-pjiuk" >> $GITHUB_ENV
-           echo "We are in Lauren's dev branch $REALM_APP_ID "
-    - name: "Test env vars"
-      run: |
-           echo ${{ env.REALM_APP_ID }}
-           echo "the realm app id is: $REALM_APP_ID"
-           echo ${{ github.ref }}
-           echo ${{ github.head_ref }}
+           echo "REALM_APP_ID=inventorydemo-staging-zahjj" >> $GITHUB_ENV
 # For Pull Requests, update the database name to be a unique name based on the current date and time
 # Also, set the environment to be the Testing envrionment
     - name: "Set environment variables for pull requests"
@@ -37,35 +29,34 @@ jobs:
            cd inventory/export/sync/environments
            time=$(date +%s%N)
            printf '{\n     "values": {"databaseName": "InventoryDemo-%s"}\n}' "$time" > testing.json     
-           cat testing.json
            cd ..
            sed -i txt 's/{/{ "environment": "testing",/' realm_config.json 
+           echo "IS_DYNAMICALLY_GENERATED_APP=true" >> $GITHUB_ENV
+    - name: "Install the Realm CLI"
+      run: npm install -g mongodb-realm-cli@beta
 # Adding --realm-url and --atlas-url to login command to workaround authentication error           
-    - name: "Install the Realm CLI & authenticate (generic api key)"
+    - name: "Authenticate to the Realm CLI (generic API key)"
       if: ${{ env.REALM_APP_ID }}
-      run: | 
-           npm install -g mongodb-realm-cli@beta
-           realm-cli login --api-key="${{ secrets.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
+      run: realm-cli login --api-key="${{ secrets.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
 # Making these separate steps since specifying the project id isn't working so we need to use separate API keys
-    - name: "Install the Realm CLI & authenticate (Testing Project api key)"
-      if: ${{ !env.REALM_APP_ID }}
-      run: | 
-           npm install -g mongodb-realm-cli@beta
-           realm-cli login --api-key="${{ secrets.REALM_API_TESTING_PROJECT_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_TESTING_PROJECT_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
-    - name: "Push updated copy of the Realm app if we have the Realm App ID"
+# Need to think through splitting this for Dev pushes
+    - name: "Authenticate to the Realm CLI (Testing Project API key)"
+      if: ${{ IS_DYNAMICALLY_GENERATED_APP }}
+      run: realm-cli login --api-key="${{ secrets.REALM_API_TESTING_PROJECT_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_TESTING_PROJECT_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
+    - name: "Push updated copy of the Realm app (Staging or Main branch)"
       if: ${{ env.REALM_APP_ID }}
       run: | 
            cd inventory/export/sync
            realm-cli push --remote="${{ env.REALM_APP_ID }}"
-    - name: "Create a new Realm app for pull requests where the Realm app does not yet exist"
-      if: ${{ !env.REALM_APP_ID }}
+    - name: "Create a new Realm app for pull requests"
+      if: ${{ IS_DYNAMICALLY_GENERATED_APP }}
       run: |
            cd inventory/export/sync
            realm-cli import -y
            output=$(realm-cli app describe)
            app_id=$(echo $output | sed 's/^.*client_app_id": "\([^"]*\).*/\1/')
            echo "REALM_APP_ID=$app_id" >> $GITHUB_ENV
-           echo "IS_DYNAMICALLY_GENERATED_APP=true" >> $GITHUB_ENV
+           
 #     - name: "Build mobile app & run tests"
 #       run: |
 #            echo "the realm app id is: $REALM_APP_ID"
