--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
 #           echo "IS_DYNAMICALLY_GENERATED_APP=false" >> $GITHUB_ENV
 # For Pull Requests, update the database name to be a unique name based on the current date and time
 # Also, set the environment to be the Testing envrionment
-    - name: "Set environment variables for pull requests"
+    - name: "Set environment variables for all other runs"
       if: ${{ !env.REALM_APP_ID }}
       run: | 
            cd inventory/export/sync/environments
@@ -37,12 +37,12 @@ jobs:
     - name: "Install the Realm CLI"
       run: npm install -g mongodb-realm-cli@beta
 # Adding --realm-url and --atlas-url to login command to workaround authentication error           
-    - name: "Authenticate to the Realm CLI (generic API key)"
+    - name: "Authenticate to the Realm CLI (using generic API key)"
       if: ${{ env.REALM_APP_ID }}
       run: realm-cli login --api-key="${{ secrets.REALM_API_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
 # Making these separate steps since specifying the project id isn't working so we need to use separate API keys
 # Need to think through splitting this for Dev pushes
-    - name: "Authenticate to the Realm CLI (Testing Project API key)"
+    - name: "Authenticate to the Realm CLI (using API key for Testing Project)"
       if: ${{ env.IS_DYNAMICALLY_GENERATED_APP }}
       run: realm-cli login --api-key="${{ secrets.REALM_API_TESTING_PROJECT_PUBLIC_KEY }}" --private-api-key="${{ secrets.REALM_API_TESTING_PROJECT_PRIVATE_KEY }}" --realm-url https://realm.mongodb.com --atlas-url https://cloud.mongodb.com
     - name: "Push updated copy of the Realm app (Staging or Main branch)"
@@ -69,5 +69,14 @@ jobs:
 #     - name: "Delete dynamically generated Realm app"
 #       if: ${{ env.IS_DYNAMICALLY_GENERATED_APP }}
 #       run: realm-cli app delete -a $REALM_APP_ID
-      
+
+# TODO: test that this doesn't run if tests fail
+  pushToProd:
+    runs-on: macos-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v2      
+    - name: "Push commits to the Main branch"
+      if: ${{ github.ref == 'refs/heads/staging' }}
+      run: git push origin main
 
