--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
       run: |
            git branch
            git remote show origin
-           git checkout master;
+           git checkout main;
            git merge origin/staging;
-           git push origin master;
+           git push origin main;
 
