--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,6 +86,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: main
+    - name: "Push to the Main branch"
       run: |
            git branch
            git remote show origin
