Clean up the push
This works, but it doesn't seem to trigger a build for the push to main

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,18 +70,10 @@ jobs:
 #       if: ${{ env.IS_DYNAMICALLY_GENERATED_APP }}
 #       run: realm-cli app delete -a $REALM_APP_ID
 
-# TODO: test that this doesn't run if tests fail
-    # - name: "Push commits to the Main branch"
-    #   if: ${{ github.ref == 'refs/heads/staging' }}
-    #   run: |
-    #        git branch
-    #        git remote show origin
-    #        git checkout main;
-    #        git merge origin/staging;
-    #        git push origin main;
   pushToProdBranch:
     runs-on: macos-latest
     needs: build
+    if: ${{ github.ref == 'refs/heads/staging' }}
     steps:
     - uses: actions/checkout@v2
       with:
@@ -89,7 +81,5 @@ jobs:
         fetch-depth: 0
     - name: "Push to the Main branch"
       run: |
-           git branch
-           git remote show origin
            git merge origin/staging
            git push
