Secrets secrets are no fun
Unless they are for everyone

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,7 +79,7 @@ jobs:
       with:
         ref: main
         fetch-depth: 0
-        token: ${{ env.PERSONAL_ACCESS_TOKEN }}
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
     - name: "Push to the Main branch"
       run: |
            git merge origin/staging
