Delete Atlas db (#11)
* Try deleting the db

* Is it already installed?

* Syntax

* Add password

* Do it all in one command

* Test not deleting the db

* Add note about delete not working

* Comment out delete db until delete app is working

* Comment the important stuff back in

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,11 +177,19 @@ jobs:
 # the tests fail to allow for manual investigation
 # Note: this step is currently NOT working due to a bug in the realm-cli:
 # https://jira.mongodb.org/browse/REALMC-8645
-#     - name: "Delete dynamically generated Realm app"
-#       if: ${{ env.IS_DYNAMICALLY_GENERATED_APP }}
-#       run: realm-cli app delete -a $REALM_APP_ID
+    # - name: "Delete dynamically generated Realm app"
+    #   if: ${{ env.IS_DYNAMICALLY_GENERATED_APP }}
+    #   run: realm-cli app delete -a $REALM_APP_ID
 
-# TODO: Add step to delete database
+# Delete the database associated with the Realm app
+# TODO: The database is appearing a few minutes after app creation, which I think is due
+# to the sync taking a couple of minutes to get setup. I'm wondering if this problem will
+# go away if we delete the app first
+# Note: this requires the IP address of the GitHub action vm to be in the Atlas access list   
+    # - name: "Delete dynamically generated database"
+    #   if: ${{ env.IS_DYNAMICALLY_GENERATED_APP }}
+    #   run: |
+    #        mongo "mongodb+srv://cluster0.blumg.mongodb.net/InventoryDemo-${{ env.CURRENT_TIME }}" --username ${{ secrets.ATLAS_USERNAME }} --password ${{ secrets.ATLAS_PASSWORD }} --eval "db.dropDatabase()"
 
 # AUTOMATICALLY PUSH COMMITS FROM STAGING BRANCH TO MAIN BRANCH  
 
