--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main, staging ]
+  pull_request:
+    branches: [ main ]
 
 jobs:    
   build:
