Skipping UITests on CI

--- a/inventory/clients/ios-swiftui/InventoryDemo/InventoryDemo.xcodeproj/xcshareddata/xcschemes/ci.xcscheme
+++ b/inventory/clients/ios-swiftui/InventoryDemo/InventoryDemo.xcodeproj/xcshareddata/xcschemes/ci.xcscheme
@@ -39,7 +39,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0A2F0CDD2630126000CEC71B"
